removed service acountname placeholder

--- a/devops-gitops/helm-charts/devops-app/values.yaml
+++ b/devops-gitops/helm-charts/devops-app/values.yaml
@@ -231,10 +231,10 @@ ingress:
     - host: "devraj.duckdns.org"
       paths:
         - path: "/api(/|$)(.*)"
-          pathType: Prefix
+          pathType: ImplementationSpecific
           backend: backend
         - path: "/(.*)"
-          pathType: Prefix
+          pathType: ImplementationSpecific
           backend: frontend
 
   tls:
