--- a/devops-gitops/helm-charts/devops-app/values.yaml
+++ b/devops-gitops/helm-charts/devops-app/values.yaml
@@ -259,18 +259,16 @@ networkPolicy:
 rbac:
   create: true
 
-
 # pod security standards
 podSecurityStandards:
   enabled: false
-  enforce: "restricted"    # baseline, restricted, privileged
+  enforce: "restricted" # baseline, restricted, privileged
   audit: "restricted"
-  warn: "restricted"  
+  warn: "restricted"
 
 # Gatekeeper (Advanced enterprise option)
 gatekeeper:
-  enabled: false 
-
+  enabled: false
 
 # Autoscaling configuration
 autoscaling:
@@ -284,27 +282,26 @@ autoscaling:
       scaleDown:
         stabilizationWindowSeconds: 300
         policies:
-        - type: Pods
-          value: 1
-          periodSeconds: 180
-        - type: Percent
-          value: 10
-          periodSeconds: 60
+          - type: Pods
+            value: 1
+            periodSeconds: 180
+          - type: Percent
+            value: 10
+            periodSeconds: 60
       scaleUp:
         stabilizationWindowSeconds: 0
         policies:
-        - type: Pods
-          value: 2
-          periodSeconds: 60
-        - type: Percent
-          value: 50
-          periodSeconds: 60
+          - type: Pods
+            value: 2
+            periodSeconds: 60
+          - type: Percent
+            value: 50
+            periodSeconds: 60
   frontend:
     minReplicas: 2
     maxReplicas: 10
     targetCPUUtilizationPercentage: 70
     targetMemoryUtilizationPercentage: 80
-
 
 # Resource Quota configuration
 resourceQuota:
@@ -319,40 +316,51 @@ resourceQuota:
     secrets: "10"
     configmaps: "10"
 
-
 # LimitRange - Resource limits enforcement
 limitRange:
-  enabled: false                    # 🔴 Disabled by default
+  enabled: false # 🔴 Disabled by default
   pod:
-    maxCpu: "2"                     # Maximum CPU per pod
-    maxMemory: "4Gi"                # Maximum memory per pod
-    minCpu: "10m"                   # Minimum CPU per pod
-    minMemory: "16Mi"               # Minimum memory per pod
+    maxCpu: "2" # Maximum CPU per pod
+    maxMemory: "4Gi" # Maximum memory per pod
+    minCpu: "10m" # Minimum CPU per pod
+    minMemory: "16Mi" # Minimum memory per pod
   container:
-    maxCpu: "1"                     # Maximum CPU per container
-    maxMemory: "2Gi"                # Maximum memory per container
-    minCpu: "10m"                   # Minimum CPU per container
-    minMemory: "16Mi"               # Minimum memory per container
-    defaultCpu: "100m"              # Default CPU if not specified
-    defaultMemory: "128Mi"          # Default memory if not specified
-    defaultRequestCpu: "50m"        # Default CPU request
-    defaultRequestMemory: "64Mi"    # Default memory request
+    maxCpu: "1" # Maximum CPU per container
+    maxMemory: "2Gi" # Maximum memory per container
+    minCpu: "10m" # Minimum CPU per container
+    minMemory: "16Mi" # Minimum memory per container
+    defaultCpu: "100m" # Default CPU if not specified
+    defaultMemory: "128Mi" # Default memory if not specified
+    defaultRequestCpu: "50m" # Default CPU request
+    defaultRequestMemory: "64Mi" # Default memory request
   pvc:
-    maxStorage: "10Gi"              # Maximum PVC size
-    minStorage: "1Gi"               # Minimum PVC size
+    maxStorage: "10Gi" # Maximum PVC size
+    minStorage: "1Gi" # Minimum PVC size
 
 # PodDisruptionBudget - Ensure availability during disruptions
 podDisruptionBudget:
-  enabled: false                    # 🔴 Disabled by default
+  enabled: false # 🔴 Disabled by default
   backend:
-    minAvailable: 1                 # Keep at least 1 backend pod
+    minAvailable: 1 # Keep at least 1 backend pod
     # Alternative: maxUnavailable: "25%"
   frontend:
-    minAvailable: 1                 # Keep at least 1 frontend pod
+    minAvailable: 1 # Keep at least 1 frontend pod
     # Alternative: maxUnavailable: "50%"
   mongodb:
-    minAvailable: 1                 # Keep at least 1 mongodb pod
+    minAvailable: 1 # Keep at least 1 mongodb pod
     # Alternative: maxUnavailable: 0
 
-
-
+# Certificate Manager
+certManager:
+  enabled: false
+  clusterIssuer:
+    create: false
+    name: letsencrypt-prod
+    email: "rajeshsvrn@gmail.com" # Use your actual email
+    server: "https://acme-v02.api.letsencrypt.org/directory"
+    privateKeySecretRef:
+      name: letsencrypt-prod-key
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
