--- a/devops-gitops/helm-charts/devops-app/templates/certificates/clusterissuer.yaml
+++ b/devops-gitops/helm-charts/devops-app/templates/certificates/clusterissuer.yaml
@@ -1,30 +1,16 @@
-# Certificate Manager configuration
-certManager:
-  enabled: false
-  clusterIssuer:
-    create: false
-    name: letsencrypt-prod
-    email: "your-email@company.com"
-    server: "https://acme-v02.api.letsencrypt.org/directory"
+{{- if and .Values.certManager.enabled .Values.certManager.clusterIssuer.create }}
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: {{ .Values.certManager.clusterIssuer.name }}
+  labels:
+    {{- include "devops-app.labels" . | nindent 4 }}
+spec:
+  acme:
+    email: {{ .Values.certManager.clusterIssuer.email }}
+    server: {{ .Values.certManager.clusterIssuer.server }}
     privateKeySecretRef:
-      name: letsencrypt-prod-key
+      name: {{ .Values.certManager.clusterIssuer.privateKeySecretRef.name }}
     solvers:
-      - http01:
-          ingress:
-            class: nginx
-
-# LimitRange configuration  
-limitRange:
-  enabled: false
-
-# PodDisruptionBudget configuration
-podDisruptionBudget:
-  enabled: false
-
-# Pod Security Standards
-podSecurityStandards:
-  enabled: false
-
-# RBAC configuration
-rbac:
-  create: true
+      {{- toYaml .Values.certManager.clusterIssuer.solvers | nindent 6 }}
+{{- end }}
