--- a/devops-gitops/helm-charts/devops-app/values.yaml
+++ b/devops-gitops/helm-charts/devops-app/values.yaml
@@ -243,10 +243,87 @@ ingress:
       secretName: "devops-tls"
 
 # Monitoring
+# Complete monitoring configuration
 monitoring:
   enabled: true
+  
+  # ServiceMonitor for Prometheus Operator
   serviceMonitor:
-    enabled: falses"
+    enabled: false
+    interval: "30s"
+    path: "/metrics"
+  
+  # Prometheus Configuration
+  prometheus:
+    enabled: false              # Disabled by default
+    image:
+      repository: "prom/prometheus"
+      tag: "v2.45.0"
+    resources:
+      requests:
+        memory: "512Mi"
+        cpu: "200m"
+      limits:
+        memory: "1Gi"
+        cpu: "500m"
+    persistence:
+      enabled: false
+      size: "10Gi"
+      storageClass: "standard"
+    retention: "15d"
+    scrapeInterval: "15s"
+    evaluationInterval: "15s"
+  
+  # Grafana Configuration
+  grafana:
+    enabled: false              # Disabled by default
+    image:
+      repository: "grafana/grafana"
+      tag: "10.0.0"
+    adminPassword: "admin123"   # Change this!
+    resources:
+      requests:
+        memory: "256Mi"
+        cpu: "100m"
+      limits:
+        memory: "512Mi"
+        cpu: "300m"
+    persistence:
+      enabled: false
+      size: "5Gi"
+      storageClass: "standard"
+  
+  # Loki Configuration  
+  loki:
+    enabled: false              # Disabled by default
+    image:
+      repository: "grafana/loki"
+      tag: "2.9.0"
+    resources:
+      requests:
+        memory: "256Mi"
+        cpu: "100m"
+      limits:
+        memory: "512Mi"
+        cpu: "300m"
+    persistence:
+      enabled: false
+      size: "10Gi"
+      storageClass: "standard"
+  
+  # Promtail Configuration
+  promtail:
+    enabled: false              # Disabled by default
+    image:
+      repository: "grafana/promtail"
+      tag: "2.9.0"
+    resources:
+      requests:
+        memory: "128Mi"
+        cpu: "50m"
+      limits:
+        memory: "256Mi"
+        cpu: "200m"
 
 # Network Policy configuration
 networkPolicy:
