--- a/devops-gitops/helm-charts/devops-app/qa-values.yaml
+++ b/devops-gitops/helm-charts/devops-app/qa-values.yaml
@@ -4,7 +4,7 @@
 # Global configuration overrides for QA
 global:
   namespace: qa
-  imageRegistry: "devopsjourney.azurecr.io"  # Same registry as develop
+  imageRegistry: "devopsjourney.azurecr.io" # Same registry as develop
   imageTag: "latest" # QA gets latest builds for testing
   environment: qa
 
@@ -26,7 +26,7 @@ backend:
   name: backend
 
   image:
-    repository: "devops-backend"  # Same repo as develop
+    repository: "devops-backend" # Same repo as develop
     tag: "v8" # Same version as develop initially
     pullPolicy: IfNotPresent
 
@@ -91,7 +91,7 @@ backend:
 
   # Same service account as develop
   serviceAccount:
-    name: backend-sa
+    name: backend-sa-qa
 
 # Frontend configuration for QA
 frontend:
@@ -99,7 +99,7 @@ frontend:
   name: frontend
 
   image:
-    repository: "devops-frontend"  # Same repo as develop
+    repository: "devops-frontend" # Same repo as develop
     tag: "v10" # Same version as develop initially
     pullPolicy: IfNotPresent
 
@@ -160,7 +160,7 @@ frontend:
 
   # Same service account as develop
   serviceAccount:
-    name: frontend-sa
+    name: frontend-sa-qa
 
 # MongoDB configuration for QA
 mongodb:
@@ -168,8 +168,8 @@ mongodb:
   name: mongodb
 
   image:
-    repository: "mongo"  # Same repo as develop
-    tag: "6.0"           # Same version as develop
+    repository: "mongo" # Same repo as develop
+    tag: "6.0" # Same version as develop
     pullPolicy: IfNotPresent
 
   # Same replica count as develop
@@ -226,7 +226,7 @@ mongodb:
 
   # Same service account as develop
   serviceAccount:
-    name: mongodb-sa
+    name: mongodb-sa-qa
 
 # Ingress configuration for QA
 ingress:
@@ -237,7 +237,7 @@ ingress:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 
   hosts:
-    - host: "qaraj.duckdns.org"  # QA-specific domain
+    - host: "qaraj.duckdns.org" # QA-specific domain
       paths:
         - path: "/api(/|$)(.*)"
           pathType: ImplementationSpecific
@@ -254,16 +254,16 @@ ingress:
 # Monitoring configuration for QA - keep same as develop
 monitoring:
   enabled: true
-  
+
   # Same ServiceMonitor configuration as develop
   serviceMonitor:
-    enabled: false  # Same as develop
+    enabled: false # Same as develop
     interval: "30s"
     path: "/metrics"
-  
+
   # Same Prometheus configuration as develop
   prometheus:
-    enabled: false  # Same as develop
+    enabled: false # Same as develop
     image:
       repository: "prom/prometheus"
       tag: "v2.45.0"
@@ -281,10 +281,10 @@ monitoring:
     retention: "15d"
     scrapeInterval: "15s"
     evaluationInterval: "15s"
-  
+
   # Same Grafana configuration as develop
   grafana:
-    enabled: false  # Same as develop
+    enabled: false # Same as develop
     image:
       repository: "grafana/grafana"
       tag: "10.0.0"
@@ -300,10 +300,10 @@ monitoring:
       enabled: false
       size: "5Gi"
       storageClass: "standard"
-  
+
   # Same Loki configuration as develop
   loki:
-    enabled: false  # Same as develop
+    enabled: false # Same as develop
     image:
       repository: "grafana/loki"
       tag: "2.9.0"
@@ -318,10 +318,10 @@ monitoring:
       enabled: false
       size: "10Gi"
       storageClass: "standard"
-  
+
   # Same Promtail configuration as develop
   promtail:
-    enabled: false  # Same as develop
+    enabled: false # Same as develop
     image:
       repository: "grafana/promtail"
       tag: "2.9.0"
@@ -335,7 +335,7 @@ monitoring:
 
 # Network Policy configuration - same as develop
 networkPolicy:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
   dnsNamespace: "kube-system"
   ingressNamespace: "ingress-nginx"
   allowExternalEgress: true
@@ -346,18 +346,18 @@ rbac:
 
 # Pod Security Standards - same as develop
 podSecurityStandards:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
   enforce: "restricted"
   audit: "restricted"
   warn: "restricted"
 
 # Gatekeeper - same as develop
 gatekeeper:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
 
 # Autoscaling configuration - same as develop
 autoscaling:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
   backend:
     minReplicas: 2
     maxReplicas: 10
@@ -390,7 +390,7 @@ autoscaling:
 
 # Resource Quota configuration - same as develop
 resourceQuota:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
   hard:
     requests.cpu: "4"
     requests.memory: "8Gi"
@@ -403,7 +403,7 @@ resourceQuota:
 
 # LimitRange - same as develop
 limitRange:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
   pod:
     maxCpu: "2"
     maxMemory: "4Gi"
@@ -424,7 +424,7 @@ limitRange:
 
 # PodDisruptionBudget - same as develop
 podDisruptionBudget:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
   backend:
     minAvailable: 1
   frontend:
@@ -434,7 +434,7 @@ podDisruptionBudget:
 
 # Certificate Manager - same as develop
 certManager:
-  enabled: false  # Same as develop
+  enabled: false # Same as develop
   clusterIssuer:
     create: false
     name: letsencrypt-prod
