update helm chart path

--- a/devops-gitops/argocd-apps/develop-application.yaml
+++ b/devops-gitops/argocd-apps/develop-application.yaml
@@ -11,9 +11,9 @@ metadata:
 spec:
   project: devops-project
   source:
-    repoURL: https://github.com/rajeshsvrn/devops-journey.git  # Replace with your repo
+    repoURL: https://github.com/rajeshsvrn/devops-journey.git # Replace with your repo
     targetRevision: HEAD
-    path: helm-charts/devops-app
+    path: devops-gitops/helm-charts/devops-app
     helm:
       valueFiles:
         - values.yaml
