update value qa file name

--- a/devops-gitops/argocd-apps/qa-application.yaml
+++ b/devops-gitops/argocd-apps/qa-application.yaml
@@ -17,7 +17,7 @@ spec:
     helm:
       valueFiles:
         - values.yaml
-        - values-qa.yaml
+        - qa-values.yaml
       parameters:
         - name: global.namespace
           value: qa
