--- a/devops-gitops/azuredevops/azure-pipelines-federated.yml
+++ b/devops-gitops/azuredevops/azure-pipelines-federated.yml
@@ -18,7 +18,7 @@ stages:
     jobs:
       - job: DeployWithFederatedIdentity
         pool:
-          vmImage: "ubuntu-latest"
+          name: "devopsjourney"
         steps:
           - task: AzureCLI@2
             displayName: "Deploy with Federated Identity"
