--- a/devops-gitops/azuredevops/azure-pipelines-federated.yml
+++ b/devops-gitops/azuredevops/azure-pipelines-federated.yml
@@ -1,37 +1,27 @@
-# azure-pipelines-federated.yml
+# azure-pipelines-ultra-simple.yml
 trigger:
   branches:
-    include: [main, qa, develop]
+    include: [develop, qa, main]
 
 variables:
   azureServiceConnection: "azure-federated-identity"
 
-  ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/develop') }}:
-    namespace: "develop"
-    serviceAccount: "azure-devops-develop-sa"
-  ${{ elseif eq(variables['Build.SourceBranch'], 'refs/heads/qa') }}:
-    namespace: "qa"
-    serviceAccount: "azure-devops-qa-sa"
-
 stages:
-  - stage: Deploy
+  - stage: Test_Auth_Only
     jobs:
-      - job: DeployWithFederatedIdentity
+      - job: TestAuth
         pool:
           name: "devopsjourney"
         steps:
           - task: AzureCLI@2
-            displayName: "Deploy with Federated Identity"
+            displayName: "Test Azure Authentication"
             inputs:
               azureSubscription: "$(azureServiceConnection)"
               scriptType: "bash"
               scriptLocation: "inlineScript"
               inlineScript: |
-                echo "🔐 Authenticated with federated identity!"
-                echo "🚀 Deploying to $(namespace) with service account $(serviceAccount)"
-
-                # Configure kubectl with Azure AD token
-                az aks get-credentials --resource-group your-rg --name your-cluster
-
-                # Deploy your application
-                kubectl get pods -n $(namespace)
+                echo "🔐 Testing Azure AD federated authentication..."
+                az account show
+                echo "✅ Authentication successful!"
+                echo "Branch: $(Build.SourceBranch)"
+                echo "This proves federated identity is working!"
